  the kerning tables of specific fonts.
* [nt]roff: The "\V" escape sequence has been introduced; it prints the
  value of an environment variable.
* troff: An explicit "N" font register argument to the ".fp" request may
  now be an arbitrary number between 1 and 255.
* troff: The "\n[.fp]" number register has been introduced to make it
  possible to determine the next unused font register.
* [nt]roff: A warning is now issued when a non-ASCII byte is found in
  a name (of a request, number register, etc.) with the "input" warning
  category.
* [nt]roff: Long request names as second arguments to macro definitions
  (as in ".de xx longname") are now handled correctly.
* [nt]roff: The ".close" request has been fixed; repeated calls to it
  could previously result in lost file stream descriptors.
* troff, otfdump, dpost: The end of floating point values in CFF data is
  now properly recognized; the previous failure to do so could result in
  errors like "invalid operand b0 range 255" with valid OpenType fonts.
* troff: In TrueType fonts with version 3.0 "post" tables, characters that
  lack a Unicode mapping can now be accessed as "\[index0xN]".
* [nt]roff: The need for the sbrk() system call has been eliminated; the
  regular system malloc() is now used.

Release 060409
* dpost: An error that could lead to invalid PostScript output when the
  last character of a long output string sequence was a backslash has
  been fixed.
* troff: The ".flig" request has been enhanced to enable the definition
  of arbitrary font-specific ligatures, e.g. ".flig R Th \[T_h]" could
  be used for a "Th" ligature. The previous syntax is still accepted.
* troff: If a hyphentation point occurs within an automatically created
  ligature, the ligature is now split into its parts.
* troff: The "\;" escape sequence has been introduced as a ligature
  suppressor without other side-effects.
* troff: The ".fdeferlig" request has been introduced. It defers building